# rusty-server

./: .gitignore  NOTES.md
frontend/: package-lock.json  package.json
frontend/public/: dummy.html  index.html
frontend/public/js/: draw.js  websocket.js
server/: Cargo.toml
server/src/: main.rs  queue.rs
server/src/server/: connection.rs  messages.rs  mod.rs  server.rs  types.rs
