[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["rt", "sync"] }
tokio-tungstenite = "0.23.0"
